--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
     .view { display: none; }
     .view.active { display: block; }
 
-    /* Tables */
+    /* Table Styles */
     table { width: 100%; border-collapse: collapse; background: white; border-radius: 8px; overflow: hidden; }
     th { background: var(--ps-green); color: white; padding: 14px; text-align: left; font-size: 12px; text-transform: uppercase; }
     td { padding: 12px; border-bottom: 1px solid #eee; font-size: 12px; vertical-align: middle; }
     .stage-group-header { background: var(--ps-light-green); font-weight: 700; color: var(--ps-dark-green); padding: 8px 12px; font-size: 11px; text-transform: uppercase; }
     .stage-spacer { height: 15px; background: var(--ps-light-gray); }
 
-    /* Adjustments UI */
+    /* Adjustments UI  */
     .adj-wrapper { position: relative; }
     .adj-btn { background: #fff; border: 1px solid #ccc; padding: 6px; border-radius: 4px; cursor: pointer; font-size: 11px; width: 100%; text-align: left; display: flex; justify-content: space-between; }
     .adj-display { display: flex; flex-wrap: wrap; gap: 4px; margin-bottom: 4px; font-size: 10px; font-weight: 600; color: var(--ps-blue); }
@@ -58,23 +58,20 @@
     .adj-dropdown { display: none; position: absolute; top: 100%; left: 0; background: white; border: 1px solid #ddd; padding: 10px; z-index: 100; box-shadow: 0 4px 12px rgba(0,0,0,0.1); width: 220px; border-radius: 4px; }
     .adj-dropdown.active { display: block; }
 
-    /* Territory UI Controls */
+    /* Territory Layouts */
     .controls { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; gap: 15px; }
     .btn-action { background: white; border: 1px solid #ddd; padding: 8px 16px; cursor: pointer; font-size: 12px; font-weight: 600; border-radius: 4px; }
     .btn-action.active { background: var(--ps-green); color: white; border-color: var(--ps-green); }
 
-    /* Grid Layout */
     .tier-section-header { background: #eef1f5; padding: 10px 20px; margin: 20px 0 10px 0; border-radius: 4px; font-weight: 700; border-left: 5px solid var(--ps-dark-green); }
     .im-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; }
     .im-card { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 2px 6px rgba(0,0,0,0.05); border-left: 5px solid var(--ps-green); }
 
-    /* List Layout (Horizontal Data Grid) */
-    .im-list-table { width: 100%; background: white; border-radius: 8px; border-collapse: collapse; overflow: hidden; }
+    .im-list-table { width: 100%; background: white; border-radius: 8px; border-collapse: collapse; }
     .im-list-table th { background: var(--ps-dark-gray); color: white; padding: 10px; font-size: 11px; }
     .im-list-table td { padding: 10px; border-bottom: 1px solid #eee; }
     .status-dot { height: 10px; width: 10px; border-radius: 50%; display: inline-block; margin-right: 5px; }
 
-    /* Capacity Visuals */
     .capacity-container { margin: 25px 0 15px 0; position: relative; }
     .progress-track { height: 14px; background: #eee; border-radius: 7px; position: relative; }
     .progress-fill { height: 100%; transition: width 0.6s ease; border-radius: 7px; }
@@ -85,11 +82,6 @@
     .list-note { width: 100%; border: 1px solid #ddd; padding: 4px; border-radius: 4px; font-size: 11px; }
     textarea { width: 100%; height: 60px; border: 1px solid #ddd; border-radius: 4px; font-size: 11px; padding: 8px; resize: none; }
     .btn-save { background: var(--ps-blue); color: white; border: none; padding: 4px 12px; border-radius: 4px; font-size: 10px; font-weight: 700; cursor: pointer; float: right; margin-top: 5px; }
-
-    .pill { padding: 4px 8px; border-radius: 12px; font-size: 10px; font-weight: 700; display: inline-block; }
-    .red { background: #f2dede; color: #a94442; }
-    .yellow { background: #fcf8e3; color: #8a6d3b; }
-    .green { background: #dff0d8; color: #3c763d; }
 
     footer { text-align: center; padding: 40px; color: var(--ps-dark-gray); font-size: 10px; font-weight: 600; }
   </style>
@@ -161,19 +153,21 @@ const ADJ_OPTIONS = ["Extended Launch", "Proof of Concept", "Pilots", "DSAs/DUAs
 
 let tierSortDir = 'desc';
 
+// My Book: 12 Examples
 let myDeals = Array.from({length: 12}, (_, i) => ({
     id: i, stage: STAGES[i % STAGES.length], name: `Customer ${String.fromCharCode(65+i)}`, size: i % 2 === 0 ? "Strategic" : "Medium", sis: "PowerSchool", health: i % 4 === 0 ? "yellow" : (i === 11 ? "red" : "green"), adj: []
 }));
 
+// Territory: 8 IM Examples
 let territoryIMs = [
-  { name: "Alex R.", tier: "T4", currentPoints: 105, dealsCount: 12, yellowRisk: 1, redRisk: 1, notes: "" },
-  { name: "Jordan M.", tier: "T2", currentPoints: 65, dealsCount: 9, yellowRisk: 1, redRisk: 0, notes: "" },
-  { name: "Casey S.", tier: "T3", currentPoints: 45, dealsCount: 10, yellowRisk: 0, redRisk: 0, notes: "" },
-  { name: "Morgan L.", tier: "T1", currentPoints: 68, dealsCount: 11, yellowRisk: 2, redRisk: 1, notes: "" },
-  { name: "Riley W.", tier: "T2", currentPoints: 88, dealsCount: 13, yellowRisk: 2, redRisk: 0, notes: "" },
-  { name: "Skyler P.", tier: "T5", currentPoints: 40, dealsCount: 9, yellowRisk: 0, redRisk: 0, notes: "" },
-  { name: "Taylor B.", tier: "T3", currentPoints: 115, dealsCount: 14, yellowRisk: 2, redRisk: 2, notes: "" },
-  { name: "Quinn J.", tier: "T1", currentPoints: 30, dealsCount: 9, yellowRisk: 0, redRisk: 0, notes: "" }
+  { name: "Alex R.", tier: "T4", currentPoints: 105, dealsCount: 12, yellowRisk: 1, redRisk: 1 },
+  { name: "Jordan M.", tier: "T2", currentPoints: 65, dealsCount: 9, yellowRisk: 1, redRisk: 0 },
+  { name: "Casey S.", tier: "T3", currentPoints: 45, dealsCount: 10, yellowRisk: 0, redRisk: 0 },
+  { name: "Morgan L.", tier: "T1", currentPoints: 68, dealsCount: 11, yellowRisk: 2, redRisk: 1 },
+  { name: "Riley W.", tier: "T2", currentPoints: 88, dealsCount: 13, yellowRisk: 2, redRisk: 0 },
+  { name: "Skyler P.", tier: "T5", currentPoints: 40, dealsCount: 9, yellowRisk: 0, redRisk: 0 },
+  { name: "Taylor B.", tier: "T3", currentPoints: 115, dealsCount: 14, yellowRisk: 2, redRisk: 2 },
+  { name: "Quinn J.", tier: "T1", currentPoints: 30, dealsCount: 9, yellowRisk: 0, redRisk: 0 }
 ];
 
 function switchView(tabId) {
@@ -224,10 +218,10 @@ function renderMyBook() {
     }
     const pts = calculateTotalPoints(deal);
     body.innerHTML += `<tr>
-      <td>${deal.stage}</td><td><strong>${deal.name}</strong></td><td>${deal.size} (${SIZE_PTS[deal.size]})</td><td>${deal.sis} (${SIS_PTS[deal.sis]})</td><td><span class="pill ${deal.health}">${deal.health} (${HEALTH_PTS[deal.health]})</span></td>
+      <td>${deal.stage}</td><td><strong>${deal.name}</strong></td><td>${deal.size}</td><td>${deal.sis}</td><td>${deal.health}</td>
       <td><div class="adj-wrapper"><div class="adj-display ${deal.adj.length > 2 ? 'vertical' : ''}">${deal.adj.map(a => `<span>${a} (+1)</span>`).join('')}</div>
       <div class="adj-btn" onclick="document.getElementById('adj-menu-${deal.id}').classList.toggle('active')">Manage ▼</div>
-      <div class="adj-dropdown" id="adj-menu-${deal.id}">${ADJ_OPTIONS.map(opt => `<label class="adj-option"><input type="checkbox" ${deal.adj.includes(opt) ? 'checked' : ''} onchange="updateAdj(${deal.id}, '${opt}')"> ${opt}</label>`).join('')}</div></div></td>
+      <div class="adj-dropdown" id="adj-menu-${deal.id}">${ADJ_OPTIONS.map(opt => `<label class="adj-option" style="display:block; margin-bottom:5px;"><input type="checkbox" ${deal.adj.includes(opt) ? 'checked' : ''} onchange="updateAdj(${deal.id}, '${opt}')"> ${opt} (+1)</label>`).join('')}</div></div></td>
       <td><strong>${pts}</strong></td>
     </tr>`;
   });
@@ -245,6 +239,17 @@ function setLayout(m) {
   renderTerritory();
 }
 
+function toggleTierSort() { tierSortDir = tierSortDir === 'desc' ? 'asc' : 'desc'; renderTerritory(); }
+
+// Persistent Notes Implementation
+function saveNotes(imName, element) {
+  const note = element.parentElement.querySelector('textarea, input').value;
+  localStorage.setItem(`note_${imName}`, note);
+  const btn = element;
+  btn.innerText = 'Saved!';
+  setTimeout(() => { btn.innerText = 'Save'; }, 2000);
+}
+
 function renderTerritory() {
   const display = document.getElementById('territory-display'); display.innerHTML = '';
   const sorted = [...territoryIMs].sort((a, b) => tierSortDir === 'desc' ? b.tier.localeCompare(a.tier) : a.tier.localeCompare(b.tier));
@@ -254,20 +259,11 @@ function renderTerritory() {
     table.innerHTML = `<thead><tr><th>Tier</th><th>IM Name</th><th>Points</th><th>% Capacity</th><th>Deals</th><th>At-Risk</th><th>Notes</th><th>Action</th></tr></thead><tbody></tbody>`;
     display.appendChild(table);
     const tbody = table.querySelector('tbody');
-
     sorted.forEach(im => {
+      const savedNote = localStorage.getItem(`note_${im.name}`) || "";
       const mpc = MPC_VALUES[im.tier], cap = Math.round((im.currentPoints / mpc) * 100);
       const color = cap >= 90 ? 'var(--ps-red)' : (cap >= 75 ? 'var(--ps-gold)' : 'var(--ps-green)');
-      tbody.innerHTML += `<tr>
-        <td style="font-weight:700; color:var(--ps-dark-green)">${im.tier}</td>
-        <td><strong>${im.name}</strong></td>
-        <td>${im.currentPoints} / ${mpc}</td>
-        <td><span class="status-dot" style="background:${color}"></span>${cap}%</td>
-        <td>${im.dealsCount}</td>
-        <td>${im.yellowRisk}Y / ${im.redRisk}R</td>
-        <td><input type="text" class="list-note" value="${im.notes}"></td>
-        <td><button class="btn-save" style="float:none; margin:0;" onclick="this.innerText='...'; setTimeout(()=>this.innerText='Save', 1000)">Save</button></td>
-      </tr>`;
+      tbody.innerHTML += `<tr><td style="font-weight:700;">${im.tier}</td><td><strong>${im.name}</strong></td><td>${im.currentPoints}/${mpc}</td><td><span class="status-dot" style="background:${color}"></span>${cap}%</td><td>${im.dealsCount}</td><td>${im.yellowRisk}Y/${im.redRisk}R</td><td><input type="text" class="list-note" value="${savedNote}"></td><td><button class="btn-save" style="float:none;" onclick="saveNotes('${im.name}', this)">Save</button></td></tr>`;
     });
   } else {
     let currentTier = ""; let grid;
@@ -275,28 +271,16 @@ function renderTerritory() {
       if (im.tier !== currentTier) {
         currentTier = im.tier;
         const header = document.createElement('div'); header.className = 'tier-section-header'; header.innerText = `Tier ${currentTier.replace('T','')}`;
-        display.appendChild(header);
-        grid = document.createElement('div'); grid.className = 'im-grid';
-        display.appendChild(grid);
+        display.appendChild(header); grid = document.createElement('div'); grid.className = 'im-grid'; display.appendChild(grid);
       }
+      const savedNote = localStorage.getItem(`note_${im.name}`) || "";
       const mpc = MPC_VALUES[im.tier], cap = Math.round((im.currentPoints / mpc) * 100);
       const color = cap >= 90 ? 'var(--ps-red)' : (cap >= 75 ? 'var(--ps-gold)' : 'var(--ps-green)');
-      const card = document.createElement('div'); card.className = 'im-card';
-      card.innerHTML = `<div style="display:flex; justify-content:space-between;"><strong>${im.name}</strong> <span class="pill green" style="font-size:9px;">${im.tier}</span></div>
-        <div style="font-size:11px; margin:5px 0;">📋 Deals: ${im.dealsCount} | ⚠️ Risk: ${im.yellowRisk + im.redRisk} (${im.yellowRisk}Y/${im.redRisk}R)</div>
-        <div style="font-size:11px;">Points: <strong>${im.currentPoints}</strong> / ${mpc}</div>
-        <div class="capacity-container">
-          <div class="marker-label" style="left:75%">75%<br>(${Math.round(mpc*0.75)})</div><div class="marker" style="left:75%"></div>
-          <div class="marker-label" style="left:90%">90%<br>(${Math.round(mpc*0.9)})</div><div class="marker" style="left:90%"></div>
-          <div class="progress-track"><div class="progress-fill" style="width:${cap}%; background:${color}"></div></div>
-        </div>
-        <div class="note-container"><textarea placeholder="Notes...">${im.notes}</textarea><button class="btn-save" onclick="this.innerText='Saved!'; setTimeout(()=>this.innerText='Save', 2000)">Save</button></div>`;
-      grid.appendChild(card);
+      grid.innerHTML += `<div class="im-card"><div style="display:flex; justify-content:space-between;"><strong>${im.name}</strong> <span class="pill green" style="font-size:9px;">${im.tier}</span></div><div style="font-size:11px; margin:5px 0;">📋 Deals: ${im.dealsCount} | ⚠️ Risk: ${im.yellowRisk + im.redRisk} (${im.yellowRisk}Y/${im.redRisk}R)</div><div style="font-size:11px;">Points: <strong>${im.currentPoints}</strong> / ${mpc}</div><div class="capacity-container"><div class="marker-label" style="left:75%">75%<br>(${Math.round(mpc*0.75)})</div><div class="marker" style="left:75%"></div><div class="marker-label" style="left:90%">90%<br>(${Math.round(mpc*0.9)})</div><div class="marker" style="left:90%"></div><div class="progress-track"><div class="progress-fill" style="width:${cap}%; background:${color}"></div></div></div><div class="note-container"><textarea placeholder="Notes...">${savedNote}</textarea><button class="btn-save" onclick="saveNotes('${im.name}', this)">Save</button></div></div>`;
     });
   }
 }
 
-function toggleTierSort() { tierSortDir = tierSortDir === 'desc' ? 'asc' : 'desc'; renderTerritory(); }
 window.onclick = e => { if (!e.target.closest('.adj-wrapper')) document.querySelectorAll('.adj-dropdown').forEach(d => d.classList.remove('active')); };
 updateMetrics(); renderMyBook();
 </script>
